force-app/main/default/objects/AtivoCarteira__c/AtivoCarteira__c.object-meta.xml
<CustomObject>
    <description>Ativos de uma determinada carteira</description>
    <label>Ativo de Carteira</label>
    <nameField>
        <displayFormat>ATC-{000000}</displayFormat>
        <label>Codigo de Ativo de Carteira</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ativos de Carteira</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>