force-app/main/default/objects/AtivoCarteira__c/fields/Ativo__c.field-meta.xml
<CustomField>
    <fullName>Ativo__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Relação entre Ativos e Ativos de Carteira</description>
    <inlineHelpText>Relação entre Ativos e Ativos de Carteira</inlineHelpText>
    <label>Ativo</label>
    <referenceTo>Ativo__c</referenceTo>
    <relationshipLabel>Ativos de Carteira</relationshipLabel>
    <relationshipName>AtivosCarteira</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>