force-app/main/default/objects/AtivoCarteira__c/fields/CarteiraInvestimentos__c.field-meta.xml
<CustomField>
    <fullName>CarteiraInvestimentos__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relação entre Carteira e Ativos de Carteira</description>
    <inlineHelpText>Relação entre Carteira e Ativos de Carteira</inlineHelpText>
    <label>Carteira de Investimentos</label>
    <referenceTo>CarteiraInvestimentos__c</referenceTo>
    <relationshipLabel>Ativos de Carteira</relationshipLabel>
    <relationshipName>AtivosCarteira</relationshipName>
    <type>Lookup</type>
</CustomField>