force-app/main/default/objects/AtivoCarteira__c/fields/Correntista__c.field-meta.xml
<CustomField>
    <fullName>Correntista__c</fullName>
    <description>Nome do Correntista</description>
    <formula>CarteiraInvestimentos__r.Contact__r.FirstName + &quot; &quot; +  CarteiraInvestimentos__r.Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Nome do Correntista</inlineHelpText>
    <label>Correntista</label>
    <type>Text</type>
</CustomField>