force-app/main/default/objects/AtivoCarteira__c/fields/CotacaoAtual__c.field-meta.xml
<CustomField>
    <fullName>CotacaoAtual__c</fullName>
    <description>Cotação Atual do Ativo</description>
    <formula>Ativo__r.CotacaoAtual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Cotação Atual do Ativo</inlineHelpText>
    <label>Cotação Atual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>