force-app/main/default/objects/AtivoCarteira__c/fields/Instituicao__c.field-meta.xml
<CustomField>
    <fullName>Instituicao__c</fullName>
    <formula>CarteiraInvestimentos__r.Instituicao__r.NomeInstituicao__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Instituição</label>
    <type>Text</type>
</CustomField>