force-app/main/default/objects/AtivoCarteira__c/fields/PrecoMedio__c.field-meta.xml
<CustomField>
    <fullName>PrecoMedio__c</fullName>
    <description>Preço médio persistido do ativo de carteira</description>
    <label>Preço Médio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>