force-app/main/default/objects/AtivoCarteira__c/fields/PrecoMedioCalculado__c.field-meta.xml
<CustomField>
    <fullName>PrecoMedioCalculado__c</fullName>
    <description>Preço Médio de Compra</description>
    <formula>ValorInvestidoCalculado__c /  QuantidadeCalculada__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Preço Médio de Compra</inlineHelpText>
    <label>Preço Médio Calculado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>