force-app/main/default/objects/AtivoCarteira__c/fields/Quantidade__c.field-meta.xml
<CustomField>
    <fullName>Quantidade__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Quantidade usada para calcular o preço médio</description>
    <inlineHelpText>Quantidade usada para calcular o preço médio</inlineHelpText>
    <label>Quantidade</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>