force-app/main/default/objects/AtivoCarteira__c/fields/QuantidadeCalculada__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeCalculada__c</fullName>
    <description>Quantidade de um determinado ativo na carteira</description>
    <label>Quantidade Calculada</label>
    <summarizedField>Ordem__c.QuantidadeContabil__c</summarizedField>
    <summaryFilterItems>
        <field>Ordem__c.Status__c</field>
        <operation>equals</operation>
        <value>Executada</value>
    </summaryFilterItems>
    <summaryForeignKey>Ordem__c.AtivoCarteira__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>