force-app/main/default/objects/AtivoCarteira__c/fields/SaldoTotalAtual__c.field-meta.xml
<CustomField>
    <fullName>SaldoTotalAtual__c</fullName>
    <description>Valor Total de um determinado ativo na carteira</description>
    <formula>Ativo__r.CotacaoAtual__c *   QuantidadeCalculada__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Valor Total de um determinado ativo na carteira</inlineHelpText>
    <label>Saldo Total Atual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>