force-app/main/default/objects/AtivoCarteira__c/fields/ValorInvestido__c.field-meta.xml
<CustomField>
    <fullName>ValorInvestido__c</fullName>
    <description>Valor Total Investido na compra do ativo</description>
    <label>Valor Investido</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>