force-app/main/default/objects/AtivoCarteira__c/fields/ValorInvestidoCalculado__c.field-meta.xml
<CustomField>
    <fullName>ValorInvestidoCalculado__c</fullName>
    <description>Calcula o valor total investido do ativo na carteira</description>
    <inlineHelpText>Calcula o valor total investido do ativo na carteira</inlineHelpText>
    <label>Valor Investido Calculado</label>
    <summarizedField>Ordem__c.ValorTotalContabil__c</summarizedField>
    <summaryForeignKey>Ordem__c.AtivoCarteira__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>