force-app/main/default/objects/AtivoCarteira__c/fields/Variacao__c.field-meta.xml
<CustomField>
    <fullName>Variacao__c</fullName>
    <description>Calcula o a valorização ou desvalorização do ativo comparando com o preço médio de compra</description>
    <formula>SaldoTotalAtual__c -    ValorInvestidoCalculado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calcula o a valorização ou desvalorização do ativo comparando com o preço médio de compra</inlineHelpText>
    <label>Variação</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>