force-app/main/default/objects/AtivoCarteira__c/fields/VariacaoPorCento__c.field-meta.xml
<CustomField>
    <fullName>VariacaoPorCento__c</fullName>
    <description>Calcula o a valorização ou desvalorização  em % do ativo comparando com o preço médio de compra</description>
    <formula>Variacao__c /  ValorInvestido__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calcula o a valorização ou desvalorização  em % do ativo comparando com o preço médio de compra</inlineHelpText>
    <label>Variação (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>