force-app/main/default/objects/AtivoCarteira__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CarteiraInvestimentos__c</columns>
    <columns>CotacaoAtual__c</columns>
    <columns>Ativo__c</columns>
    <columns>SaldoTotalAtual__c</columns>
    <columns>Variacao__c</columns>
    <columns>VariacaoPorCento__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>